--- a/watertransport/src/main/res/layout/activity_order_detail.xml
+++ b/watertransport/src/main/res/layout/activity_order_detail.xml
@@ -166,9 +166,9 @@
         <ImageView
             android:id="@+id/iv_header"
             android:layout_width="56dp"
-            android:src="@drawable/ic_logo"
             android:layout_height="56dp"
-            android:layout_margin="20dp" />
+            android:layout_margin="20dp"
+            android:src="@drawable/ic_logo" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -188,7 +188,6 @@
                 android:id="@+id/tv_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 android:text="手机号 "
                 android:textColor="@color/text_black_title"
@@ -200,14 +199,16 @@
                 android:layout_height="wrap_content"
                 android:text="固定电话 "
                 android:textColor="@color/text_black_title"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:visibility="gone" />
         </LinearLayout>
 
         <ImageView
             android:id="@+id/iv_call_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp" />
+            android:padding="20dp"
+            android:src="@drawable/ic_call_phone" />
 
     </LinearLayout>
 
