--- a/watertransport/src/main/res/layout/item_boat_host_order.xml
+++ b/watertransport/src/main/res/layout/item_boat_host_order.xml
@@ -33,7 +33,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="111dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:orientation="horizontal">
 
