--- a/watertransport/src/main/res/layout/activity_order_detail.xml
+++ b/watertransport/src/main/res/layout/activity_order_detail.xml
@@ -168,7 +168,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_margin="20dp"
-            android:src="@drawable/ic_logo" />
+            android:src="@drawable/ic_circle_logo" />
 
         <LinearLayout
             android:layout_width="0dp"
