--- a/watertransport/src/main/res/layout/activity_select_role.xml
+++ b/watertransport/src/main/res/layout/activity_select_role.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
-        android:src="@drawable/ic_logo" />
+        android:src="@drawable/ic_circle_logo" />
 
     <RelativeLayout
         android:id="@+id/rl_boat_owner"
