--- a/watertransport/src/main/res/layout/activity_user_info.xml
+++ b/watertransport/src/main/res/layout/activity_user_info.xml
@@ -52,7 +52,7 @@
                         android:layout_width="38dp"
                         android:layout_height="38dp"
                         android:layout_marginRight="@dimen/normal_margin"
-                        android:src="@drawable/ic_logo" />
+                        android:src="@drawable/ic_circle_logo" />
 
                     <ImageView
                         android:layout_width="wrap_content"
