--- a/watertransport/src/main/res/layout/fragment_mine.xml
+++ b/watertransport/src/main/res/layout/fragment_mine.xml
@@ -21,7 +21,7 @@
             android:layout_height="58dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="30dp"
-            android:src="@drawable/ic_logo" />
+            android:src="@drawable/ic_circle_logo" />
 
         <TextView
             android:id="@+id/tv_user_name"
