--- a/watertransport/src/main/res/layout/activity_login.xml
+++ b/watertransport/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_circle_logo" />
+                android:src="@drawable/pic_all_logo" />
 
             <TextView
                 android:id="@+id/tv_app_name"
@@ -44,6 +44,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="12dp"
                 android:text="@string/app_name"
+                android:visibility="gone"
                 android:textColor="@android:color/black"
                 android:textSize="26sp" />
 
