--- a/watertransport/src/main/res/layout/activity_select_role.xml
+++ b/watertransport/src/main/res/layout/activity_select_role.xml
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/ic_circle_logo" />
+        android:layout_marginTop="50dp"
+        android:src="@drawable/pic_all_logo" />
 
     <RelativeLayout
         android:id="@+id/rl_boat_owner"
@@ -21,7 +21,7 @@
         android:layout_height="44dp"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/selector_common_blue"
         android:padding="6dp">
 
