--- a/watertransport/src/main/res/layout/activity_order_detail.xml
+++ b/watertransport/src/main/res/layout/activity_order_detail.xml
@@ -82,6 +82,7 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -130,6 +131,18 @@
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_extra"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#589CEB"
+        android:gravity="left"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:textColor="@android:color/white"
+        android:textSize="12sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
