--- a/watertransport/src/main/res/layout/activity_add_new_order.xml
+++ b/watertransport/src/main/res/layout/activity_add_new_order.xml
@@ -139,7 +139,7 @@
                     android:layout_weight="1"
                     android:background="@android:color/white"
                     android:gravity="right"
-                    android:hint="请输入（吨／元）"
+                    android:hint="请输入（元／吨）"
                     android:textColorHint="@color/text_hint_color"
                     android:textSize="@dimen/text_size_title2" />
             </LinearLayout>
@@ -241,7 +241,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="起运时间"
+                        android:text="装货时间"
                         android:textColor="@color/text_action"
                         android:textSize="@dimen/text_size_title2" />
 
@@ -283,7 +283,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="运达时间"
+                        android:text="起货时间"
                         android:textColor="@color/text_action"
                         android:textSize="@dimen/text_size_title2" />
 
