--- a/watertransport/src/main/res/values/styles.xml
+++ b/watertransport/src/main/res/values/styles.xml
@@ -38,4 +38,8 @@
         <item name="tabTextColor">@color/text_hint_color</item>
         <item name="tabSelectedTextColor">@color/colorPrimary</item>
     </style>
+
+    <style name="CustomCheckboxTheme" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/bg_checkbox_style</item>
+    </style>
 </resources>
