--- a/watertransport/src/main/res/layout/activity_forget_pw1.xml
+++ b/watertransport/src/main/res/layout/activity_forget_pw1.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_main"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.watertransport.ui.loginregister.ForgetPwActivity">
 
     <include layout="@layout/layout_app_bar" />
 
@@ -13,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,16 +30,16 @@
                 android:layout_height="match_parent"
                 android:layout_margin="@dimen/normal_margin"
                 android:gravity="center"
-                android:text="新密码"
-                android:textColor="@color/text_black_title"
+                android:text="手机号"
+                android:textColor="@color/text_action"
                 android:textSize="16dp" />
 
             <cn.timeface.timekit.ui.edittext.XEditText
-                android:id="@+id/et_new_pw"
+                android:id="@+id/ed_boat_phone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
-                android:inputType="textPassword"
+                android:inputType="phone"
                 android:textColorHint="@color/text_hint_color"
                 android:textSize="@dimen/text_size_title2"
                 app:x_clearDrawable="@drawable/ic_delete" />
@@ -61,21 +64,33 @@
                 android:layout_height="match_parent"
                 android:layout_margin="@dimen/normal_margin"
                 android:gravity="center"
-                android:text="确认新密码"
-                android:textColor="@color/text_black_title"
+                android:text="验证码"
+                android:textColor="@color/text_action"
                 android:textSize="16dp" />
 
             <cn.timeface.timekit.ui.edittext.XEditText
-                android:id="@+id/ed_again_pw"
-                android:layout_width="match_parent"
+                android:id="@+id/ed_verify_num"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:inputType="textPassword"
+                android:inputType="phone"
+                android:padding="4dp"
                 android:textColorHint="@color/text_hint_color"
                 android:textSize="@dimen/text_size_title2"
                 app:x_clearDrawable="@drawable/ic_delete" />
+
+            <Button
+                android:id="@+id/btn_get_verify"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:background="@drawable/selector_common_btn_bg"
+                android:text="获取验证码"
+                android:textColor="@android:color/white"
+                android:textSize="11sp" />
         </LinearLayout>
     </LinearLayout>
+
 
     <Button
         android:id="@+id/btn_submit"
@@ -84,6 +99,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
         android:background="@drawable/selector_common_btn_bg"
-        android:text="确定"
+        android:text="下一步"
         android:textColor="@android:color/white" />
 </LinearLayout>
