--- a/watertransport/src/main/res/layout/layout_register_header.xml
+++ b/watertransport/src/main/res/layout/layout_register_header.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,6 +26,86 @@
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
             android:hint="手机号或者数字、字母组成"
+            android:inputType="text"
+            android:maxLength="10"
+            android:textColorHint="@color/text_hint_color"
+            android:textSize="@dimen/text_size_title2"
+            app:x_clearDrawable="@drawable/ic_delete" />
+    </LinearLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="@dimen/normal_margin"
+        android:layout_marginRight="@dimen/normal_margin"
+        android:background="@color/divider_line" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/normal_margin"
+            android:gravity="center"
+            android:text="手机号"
+            android:textColor="@color/text_black_title"
+            android:textSize="16dp" />
+
+        <cn.timeface.timekit.ui.edittext.XEditText
+            android:id="@+id/ed_user_phone"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:hint="请输入手机号码"
+            android:inputType="phone"
+            android:textColorHint="@color/text_hint_color"
+            android:textSize="@dimen/text_size_title2"
+            app:x_clearDrawable="@drawable/ic_delete" />
+
+        <Button
+            android:id="@+id/btn_get_verify"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="@dimen/normal_margin"
+            android:background="@drawable/selector_common_btn_bg"
+            android:text="获取验证码"
+            android:textColor="@android:color/white"
+            android:textSize="11sp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="@dimen/normal_margin"
+        android:layout_marginRight="@dimen/normal_margin"
+        android:background="@color/divider_line" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/normal_margin"
+            android:gravity="center"
+            android:text="验证码"
+            android:textColor="@color/text_black_title"
+            android:textSize="16dp" />
+
+        <cn.timeface.timekit.ui.edittext.XEditText
+            android:id="@+id/ed_verify_num"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:hint="请输入验证码"
             android:inputType="text"
             android:maxLength="10"
             android:textColorHint="@color/text_hint_color"
@@ -61,38 +142,6 @@
             android:hint="6-20位数字、字母或字符组成"
             android:inputType="textPassword"
             android:maxLength="20"
-            android:textColorHint="@color/text_hint_color"
-            android:textSize="@dimen/text_size_title2"
-            app:x_clearDrawable="@drawable/ic_delete" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginLeft="@dimen/normal_margin"
-        android:layout_marginRight="@dimen/normal_margin"
-        android:background="@color/divider_line" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/normal_margin"
-            android:gravity="center"
-            android:text="手机号"
-            android:textColor="@color/text_black_title"
-            android:textSize="16dp" />
-
-        <cn.timeface.timekit.ui.edittext.XEditText
-            android:id="@+id/ed_user_phone"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:inputType="phone"
             android:textColorHint="@color/text_hint_color"
             android:textSize="@dimen/text_size_title2"
             app:x_clearDrawable="@drawable/ic_delete" />
