--- a/watertransport/src/main/res/layout/activity_setting.xml
+++ b/watertransport/src/main/res/layout/activity_setting.xml
@@ -77,15 +77,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="客服热线"
+            android:text="客服热线：18725518633"
             android:textColor="@color/text_action"
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/iv_call_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_right_arrow" />
+            android:src="@drawable/ic_call_phone" />
     </RelativeLayout>
 
     <View
